--- a/package.json
+++ b/package.json
@@ -1,50 +1,32 @@
 {
-  "name": "my-app-ts",
-  "version": "0.1.0",
+  "name": "bookstore",
+  "version": "0.0.0",
   "private": true,
-  "homepage": "https://digitalweb.com.co/",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "node index.js"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@react-oauth/google": "^0.11.1",
-    "@types/jsonwebtoken": "^9.0.2",
-    "@types/node": "20.4.9",
-    "@types/react": "18.2.19",
-    "@types/react-dom": "18.2.7",
-    "axios": "^1.5.0",
-    "bootstrap": "^5.3.1",
+    "axios": "^1.4.0",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
+    "debug": "~2.6.9",
+    "dotenv": "^16.3.1",
+    "ejs": "~2.6.1",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.1",
-    "next": "13.4.13",
-    "next-cloudinary": "^4.18.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.10.1",
-    "react-redux": "^8.1.2",
-    "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2",
-    "semantic-ui-css": "^2.5.0",
-    "semantic-ui-react": "^2.1.4",
-    "sharp": "^0.32.4",
-    "typescript": "5.1.6"
+    "morgan": "~1.9.1",
+    "pg": "^8.11.2",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.32.1"
   },
   "devDependencies": {
-    "@cld-apis/types": "^0.1.6",
-    "@types/react-redux": "^7.1.25",
-    "@types/redux": "^3.6.0",
-    "@types/redux-thunk": "^2.1.0"
+    "nodemon": "^3.0.1"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
